# trabalho03-persistencia

./: .env  .gitignore  README.md  database.py  diagnose_beanie.py  main.py  pyproject.toml  results.txt  seed.py  verificar_dados.py
models/: __init__.py  aluno.py  autor.py  emprestimo.py  livro.py
routes/: alunos.py  autores.py  emprestimos.py  estatisticas.py  livros.py
trabalho_original/models/: __init__.py  aluno.py  autor.py  livro.py  livro_autor_link.py
trabalho_original/routes/: alunos.py  autores.py  emprestimos.py  home.py  livros.py
